--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "marked": "^15.0.4",
     "next": "15.1.1",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
